--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,12 @@
-version: "3.9"
+version: "3.3"
 services:
   tcptunnel:
     container_name: tcptunnel
     build:
       context: .
+      args:
+        http_proxy: http://localhost:8888
+        https_proxy: http://localhost:8888
     network_mode: host
     environment:
       env_file: .env
