--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     build:
       context: .
       args:
-        http_proxy: http://localhost:8888
-        https_proxy: http://localhost:8888
+        http_proxy: http://172.17.0.1:8889
+        https_proxy: http://172.17.0.1:8889
     network_mode: host
     environment:
       env_file: .env
